<resources>
    <string name="app_name">Epic Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_note">Add new note</string>
    <string name="let_s_be_productive_today">Let\'s be productive today</string>
    <string name="this_is_a_task_sample">This is a Task sample</string>

    <string name="work">Work</string>
    <string name="school">School</string>
    <string name="family">Family</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="create_new_task">Create new task</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="alarm">Alarm</string>
    <string name="date">Date</string>
    <string name="remind_me">Remind me</string>
    <string name="priority">Priority</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="calendar">Calendar</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="there_are_no_pending_tasks_on_this_day">There are no pending tasks on this day!</string>
    <string name="press_the_button_below_to_add_tasks">Press the button below to add tasks!</string>
</resources>