<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.newtask.NewTaskFragment"
        android:orientation="vertical"
        android:background="@color/background">
        <include
            android:id="@+id/tool"
            layout="@layout/new_task_toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_marginTop="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/new_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_bold"
                    android:text="@string/create_new_task"
                    android:textColor="@color/text"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/task_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/transparent"
                    android:fontFamily="@font/dmsans_regular"
                    android:hint="@string/task_name"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_task" />

                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/task_name_et" />

                <EditText
                    android:id="@+id/task_description_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/transparent"
                    android:fontFamily="@font/dmsans_regular"
                    android:hint="@string/task_description"
                    android:textColor="@color/text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/line1" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/task_description_et" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.4" />

                <ImageView
                    android:id="@+id/date_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_outline_calendar_month_24"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/date"
                    android:textColor="@color/text"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@+id/date_iv"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/date_iv" />

                <ImageView
                    android:id="@+id/alarm_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_outline_notifications_24"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/date_iv" />

                <TextView
                    android:id="@+id/alarm_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/alarm"
                    android:textColor="@color/text"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@+id/alarm_iv"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/alarm_iv" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/remind_sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/alarm_iv" />

                <TextView
                    android:id="@+id/remind_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/remind_me"
                    android:textColor="@color/text"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@+id/remind_sw"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/remind_sw" />

                <TextView
                    android:id="@+id/priority_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/priority"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/remind_sw" />

                <LinearLayout
                    android:id="@+id/priority_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/priority_tv">

                    <TextView
                        android:id="@+id/low_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="13dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/green_stroke_bg"
                        android:ellipsize="end"
                        android:fontFamily="@font/dmsans_bold"
                        android:maxLines="1"
                        android:text="@string/low"
                        android:textAllCaps="false"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/medium_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="13dp"
                        android:gravity="center"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/orange_stroke_bg"
                        android:ellipsize="end"
                        android:fontFamily="@font/dmsans_bold"
                        android:maxLines="1"
                        android:text="@string/medium"
                        android:textAllCaps="false"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/high_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="13dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/red_stroke_bg"
                        android:ellipsize="end"
                        android:fontFamily="@font/dmsans_bold"
                        android:maxLines="1"
                        android:text="@string/high"
                        android:textAllCaps="false"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/category_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/dmsans_medium"
                    android:text="@string/category"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/priority_ll" />

                <LinearLayout
                    android:id="@+id/category_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/category_tv"
                    app:layout_constraintVertical_bias="0.0">

                    <TextView
                        android:id="@+id/work_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="13dp"
                        android:gravity="center"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/orange_bg"
                        android:ellipsize="end"
                        android:fontFamily="@font/dmsans_bold"
                        android:maxLines="1"
                        android:text="@string/work"
                        android:textAllCaps="false"
                        android:textColor="@color/text"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/family_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="13dp"
                        android:gravity="center"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/cyan_bg"
                        android:ellipsize="end"
                        android:fontFamily="@font/dmsans_bold"
                        android:maxLines="1"
                        android:text="@string/family"
                        android:textAllCaps="false"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/school_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="13dp"
                        android:gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/pink_bg"
                        android:ellipsize="end"
                        android:fontFamily="@font/dmsans_bold"
                        android:maxLines="1"
                        android:text="@string/school"
                        android:textAllCaps="false"
                        android:textColor="@color/purple"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>